tests/typecheck/should_fail/T9605.hs
module T9605 where

f1 :: Monad m => m Bool
f1 = undefined

f2 :: Monad m => m Bool
f2 = f1 undefined
